# GPU_GSPCA

./: .gitignore  .gspca_gpu.py.swp  .travis.yml  CMakeLists.txt  README.md  demo.py  gspca.py  gspca_gpu.py  licence.txt  pca.py  setup.py
cpp/: CMakeLists.txt  gs_pca_cuda.cu  kernel_pca.cu  main.cpp
cpp/include/: gs_pca_cuda.h  kernel_pca.h
include/: gs_pca_cuda.h  kernel_pca.h  kernel_pca_pywrap.hpp
src/: .kernel_pca.cu.swo  kernel_pca.cu  kernel_pca_pywrap.cpp  main.cpp
test/: cpp_test.cpp  kernel_pca_test.cpp  py_kernel_pca_test.py
